styles/style.css
.inline-icon {
    display: inline;
    max-height: 1.3em;
    margin: 0 0.2em;
    background-color: #FCFCFC;
    padding: 0.1em;
    border-radius: 0.2em
}

/* If two ul elements follow each other, remove margin between them. */
.prose :where(ul+ul):not(:where([class~=not-prose] *)) {
    margin-top: 0;
}

.prose ul:has(+ ul):not(:where([class~=not-prose] *)) {
    margin-bottom: 0;
}

